# routes/api.php
@@ -3,8 +3,7 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\v1\PageController;
-use Illuminate\Support\Facades\App;
-use App\Models\Lang;
+use App\Http\Controllers\Api\v1\CallbackController;
 
 //Route::get('/user', function (Request $request) {
 //    return $request->user();
@@ -16,5 +15,12 @@ Route::prefix('/page')->group(function () {
             'index',
         ])->names([
             'page.index'
+        ]);
+
+    Route::apiResource('/callback', CallbackController::class)
+        ->only([
+            'store',
+        ])->names([
+            'page.store'
         ]);
 });
